scode/GirlsPower/prob11/error.txt
  File "main.py", line 10
    if int(p[c-1]) not in [0,1]:
                               ^
IndentationError: unindent does not match any outer indentation level
